--- a/index.html
+++ b/index.html
@@ -1533,5 +1533,8 @@ dataLayer.push({
     }
   });
 </script>
+<footer style="font-size:12px; text-align:center; margin-top:20px; color:#666;">
+  © 2025 Rune Andersen — Free to use, but not to copy or redistribute. See LICENSE.
+</footer>
 </body>
 </html>
