--- a/1.0.0/index.html
+++ b/1.0.0/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>GTM Playground</title>
+  <title>GTM & dataLayer Playground v1 (LEGACY)</title>
   <style>
     body {
       font-family: sans-serif;
@@ -298,5 +298,9 @@ dataLayer.push({
     loadPresets();
   });
 </script>
+  <footer style="font-size:12px; text-align:center; margin-top:20px; color:#666;">
+  © 2025 Rune Andersen — Free to use, but not to copy or redistribute. See LICENSE.
+</footer>
+
 </body>
 </html>
