--- a/3.0.0/index.html
+++ b/3.0.0/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>GTM Playground</title>
+  <title>GTM & dataLayer Playground v3 (LEGACY)</title>
   <!-- Application version metadata.  Update these values when you commit new versions.
        app-version holds a simple version string, e.g. 1.2.3, and app-changelog holds
        a short description of what changed. -->
@@ -1048,5 +1048,8 @@ dataLayer.push({
     }
   });
 </script>
+<footer style="font-size:12px; text-align:center; margin-top:20px; color:#666;">
+  © 2025 Rune Andersen — Free to use, but not to copy or redistribute. See LICENSE.
+</footer>
 </body>
 </html>
